# lpi-basic

./: Cargo.toml
lpi-interpreter/: Cargo.toml
lpi-interpreter/src/: command.rs  interpreter.rs  let.rs  lib.rs  main.rs
lpi-lexer/: Cargo.toml
lpi-lexer/src/: lib.rs  tests.rs
lpi-parser/: Cargo.toml
lpi-parser/src/: expressions.rs  lib.rs  node_type.rs  parse_node.rs  parsing.rs  tests.rs
lpi-terminal/: Cargo.toml
lpi-terminal/programs/: hello_world.bas
lpi-terminal/src/: main.rs
