[package]
name = "lpi-terminal"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
lpi-interpreter = { workspace = true }
lpi-lexer = { workspace = true }
lpi-parser = { workspace = true }
